<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDark"
    android:layout_margin="2dp"
    android:id="@+id/music_item_container">

    <ImageView
        android:id="@+id/music_img"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/default_art"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/select_btn"
        app:layout_constraintStart_toEndOf="@+id/music_img">

        <TextView
            android:id="@+id/music_file_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/song_name"
            android:textSize="@dimen/primary_name"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/music_file_artist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/secondary_name"
            android:text="@string/song_artist"
            android:maxLines="1"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <Button
        android:id="@+id/select_btn"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:text="@string/select"
        android:visibility="gone"/>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:background="@color/colorWhite"-->
<!--        android:layout_height="1dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>